[package]
name = "implog"
version = "0.1.0"
edition = "2024"

[lib]
name = "implog"
path = "src/lib.rs"

[[bin]]
name = "implog-cli"
path = "src/bin/cli.rs"

[build-dependencies]
lalrpop = "*"

[dependencies]
either = "*"
hashbrown = "*"
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
rustc-hash = "*"
string-interner = "*"
